# rectified-flow

./: .gitignore  .gitmodules  README.md  caption_internvl2.py  caption_manual.py  flux_encode.py  flux_infer.py  generate_data.py  infer_flux.py  infer_sd3.py  infer_wan.py  infer_wan14b.py  infer_wan5b.py  infer_z_image.py  offload.py  profile_flux.py  pyproject.toml  requirements.txt  rf_inversion.py  rf_inversion_flux.py  run_wan.py  sd3_infer.py  solvers.py  time_sampler.py  train.py  train_face.py  train_lora.py  train_qlora.py  train_utils.py
flux2_ui/: server.py
flux2_ui/static/: app.js  index.html  style.css
modelling/: __init__.py  attn.py  autoencoder.py  face_embedder.py  flux.py  int8_kernel.py  iresnet.py  lora.py  mx.py  nvfp4.py  rope.py  sd3.py  solvers.py  text_embedder.py  unet.py  utils.py  z_image.py
modelling/flux/: __init__.py  layers.py  math.py  model.py  pipeline.py  redux.py
modelling/flux1/: __init__.py  model.py  pipeline.py
modelling/flux2/: __init__.py  model.py  pipeline.py
modelling/kernels/: __init__.py  int8.py
modelling/wan/: __init__.py  attention.py  model.py  pipeline_14b.py  pipeline_5b.py  vae.py
modelling/z_image/: __init__.py  model.py  pipeline.py
subclass/: __init__.py  int8.py  int8_mm.py  nf4.py
webui/static/: app.js  index.html
